[gd_scene load_steps=13 format=3 uid="uid://6idr7pifkhno"]

[ext_resource type="Texture2D" uid="uid://v3535ehhmcla" path="res://assets/tiles/Untitled.png" id="1_lmxsb"]
[ext_resource type="Texture2D" uid="uid://3sn88ugna6l4" path="res://assets/mmparallax/sky.png" id="1_pyllt"]
[ext_resource type="Texture2D" uid="uid://cbcys3e4yj0wh" path="res://assets/mmparallax/mountain2.png" id="2_ls0xx"]
[ext_resource type="Texture2D" uid="uid://d3dotsv46cfpn" path="res://assets/mmparallax/pine2.png" id="3_7h2yk"]
[ext_resource type="Texture2D" uid="uid://m8atkcui0vp1" path="res://assets/UI/notepad.png" id="3_25rel"]
[ext_resource type="Texture2D" uid="uid://cirmmdqqgb4rj" path="res://assets/mmparallax/pine1.png" id="4_l7tbx"]
[ext_resource type="Script" path="res://assets/UI/Notepad.gd" id="4_ooibg"]
[ext_resource type="FontFile" uid="uid://dkh5qd2vbmivp" path="res://assets/UI/Notepen.ttf" id="4_srkwc"]
[ext_resource type="Texture2D" uid="uid://dqwq2h0ebca47" path="res://assets/campsite/tent.png" id="6_qow2k"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_od01l"]
texture = ExtResource("1_lmxsb")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0

[sub_resource type="TileSet" id="TileSet_4qcmb"]
terrain_set_0/mode = 0
sources/0 = SubResource("TileSetAtlasSource_od01l")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ebknh"]

[node name="Control2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2.5, 2.5)
texture = ExtResource("1_pyllt")
centered = false

[node name="Sprite2D4" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 200)
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_ls0xx")
centered = false

[node name="Sprite2D3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 250)
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_7h2yk")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 400)
scale = Vector2(2.5, 2.5)
texture = ExtResource("4_l7tbx")
centered = false

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, 630)
tile_set = SubResource("TileSet_4qcmb")
format = 2
layer_0/tile_data = PackedInt32Array(0, 393216, 0, 1, 458752, 0, 2, 458752, 0, 3, 458752, 0, 4, 458752, 0, 5, 458752, 0, 6, 458752, 0, 7, 458752, 0, 8, 458752, 0, 9, 458752, 0, 10, 458752, 0, 11, 458752, 0, 65536, 589824, 0, 65537, 327680, 0, 65538, 327680, 0, 65539, 327680, 0, 65540, 327680, 0, 65541, 327680, 0, 65542, 327680, 0, 65543, 327680, 0, 65544, 327680, 0, 65545, 327680, 0, 65546, 327680, 0, 65547, 327680, 0, 12, 458752, 0, 13, 458752, 0, 14, 458752, 0, 15, 458752, 0, 16, 458752, 0, 17, 458752, 0, 18, 458752, 0, 19, 458752, 0, 20, 458752, 0, 21, 458752, 0, 22, 458752, 0, 23, 458752, 0, 65548, 327680, 0, 65549, 327680, 0, 65550, 327680, 0, 65551, 327680, 0, 65552, 327680, 0, 65553, 327680, 0, 65554, 327680, 0, 65555, 327680, 0, 65556, 327680, 0, 65557, 327680, 0, 65558, 327680, 0, 65559, 327680, 0, 131072, 589824, 0, 131073, 327680, 0, 131074, 327680, 0, 131075, 327680, 0, 131076, 327680, 0, 131077, 327680, 0, 131078, 327680, 0, 131079, 327680, 0, 131080, 327680, 0, 131081, 327680, 0, 131082, 327680, 0, 131083, 327680, 0, 131084, 327680, 0, 131085, 327680, 0, 131086, 327680, 0, 131087, 327680, 0, 131088, 327680, 0, 131089, 327680, 0, 131090, 327680, 0, 131091, 327680, 0, 131092, 327680, 0, 131093, 327680, 0, 131094, 327680, 0, 131095, 327680, 0, 196608, 589824, 0, 196609, 327680, 0, 196610, 327680, 0, 196611, 327680, 0, 196612, 327680, 0, 196613, 327680, 0, 196614, 327680, 0, 196615, 327680, 0, 196616, 327680, 0, 196617, 327680, 0, 196618, 327680, 0, 196619, 327680, 0, 196620, 327680, 0, 196621, 327680, 0, 196622, 327680, 0, 196623, 327680, 0, 196624, 327680, 0, 196625, 327680, 0, 196626, 327680, 0, 196627, 327680, 0, 196628, 327680, 0, 196629, 327680, 0, 196630, 327680, 0, 196631, 327680, 0, 262144, 589824, 0, 262145, 327680, 0, 262146, 327680, 0, 262147, 327680, 0, 262148, 327680, 0, 262149, 327680, 0, 262150, 327680, 0, 262151, 327680, 0, 262152, 327680, 0, 262153, 327680, 0, 262154, 327680, 0, 262155, 327680, 0, 262156, 327680, 0, 262157, 327680, 0, 262158, 327680, 0, 262159, 327680, 0, 262160, 327680, 0, 262161, 327680, 0, 262162, 327680, 0, 262163, 327680, 0, 262164, 327680, 0, 262165, 327680, 0, 262166, 327680, 0, 262167, 327680, 0, 327680, 589824, 0, 327681, 327680, 0, 327682, 327680, 0, 327683, 327680, 0, 327684, 327680, 0, 327685, 327680, 0, 327686, 327680, 0, 327687, 327680, 0, 327688, 327680, 0, 327689, 327680, 0, 327690, 327680, 0, 327691, 327680, 0, 327692, 327680, 0, 327693, 327680, 0, 327694, 327680, 0, 327695, 327680, 0, 327696, 327680, 0, 327697, 327680, 0, 327698, 327680, 0, 327699, 327680, 0, 327700, 327680, 0, 327701, 327680, 0, 327702, 327680, 0, 327703, 327680, 0, 393216, 589824, 0, 393217, 327680, 0, 393218, 327680, 0, 393219, 327680, 0, 393220, 327680, 0, 393221, 327680, 0, 393222, 327680, 0, 393223, 327680, 0, 393224, 327680, 0, 393225, 327680, 0, 393226, 327680, 0, 393227, 327680, 0, 393228, 327680, 0, 393229, 327680, 0, 393230, 327680, 0, 393231, 327680, 0, 393232, 327680, 0, 393233, 327680, 0, 393234, 327680, 0, 393235, 327680, 0, 393236, 327680, 0, 393237, 327680, 0, 393238, 327680, 0, 393239, 327680, 0, 24, 458752, 0, 393240, 327680, 0, 327704, 327680, 0, 262168, 327680, 0, 196632, 327680, 0, 65560, 327680, 0, 131096, 327680, 0, 25, 458752, 0, 26, 458752, 0, 27, 458752, 0, 28, 458752, 0, 29, 458752, 0, 30, 458752, 0, 31, 458752, 0, 32, 458752, 0, 33, 458752, 0, 34, 458752, 0, 35, 458752, 0, 36, 458752, 0, 37, 458752, 0, 38, 458752, 0, 39, 458752, 0, 40, 458752, 0, 41, 458752, 0, 42, 458752, 0, 43, 458752, 0, 44, 458752, 0, 45, 458752, 0, 46, 458752, 0, 47, 458752, 0, 48, 458752, 0, 49, 458752, 0, 50, 458752, 0, 51, 458752, 0, 52, 458752, 0, 53, 458752, 0, 54, 458752, 0, 55, 458752, 0, 56, 458752, 0, 57, 458752, 0, 58, 458752, 0, 131097, 327680, 0, 65561, 327680, 0, 65562, 327680, 0, 131098, 327680, 0, 196634, 327680, 0, 196633, 327680, 0, 262169, 327680, 0, 327705, 327680, 0, 393241, 327680, 0, 393242, 327680, 0, 327706, 327680, 0, 262170, 327680, 0, 262171, 327680, 0, 196635, 327680, 0, 131099, 327680, 0, 65563, 327680, 0, 65564, 327680, 0, 131100, 327680, 0, 196636, 327680, 0, 262172, 327680, 0, 327708, 327680, 0, 327707, 327680, 0, 393243, 327680, 0, 393244, 327680, 0, 393245, 327680, 0, 327709, 327680, 0, 262173, 327680, 0, 196637, 327680, 0, 131101, 327680, 0, 65565, 327680, 0, 65566, 327680, 0, 131102, 327680, 0, 196638, 327680, 0, 262174, 327680, 0, 327710, 327680, 0, 393246, 327680, 0, 393247, 327680, 0, 327711, 327680, 0, 262175, 327680, 0, 196639, 327680, 0, 131103, 327680, 0, 65567, 327680, 0, 65568, 327680, 0, 131104, 327680, 0, 196640, 327680, 0, 262176, 327680, 0, 327712, 327680, 0, 393248, 327680, 0, 393249, 327680, 0, 327713, 327680, 0, 262177, 327680, 0, 196641, 327680, 0, 131105, 327680, 0, 65569, 327680, 0, 65570, 327680, 0, 131106, 327680, 0, 196642, 327680, 0, 262178, 327680, 0, 327714, 327680, 0, 393250, 327680, 0, 393251, 327680, 0, 327715, 327680, 0, 262179, 327680, 0, 196643, 327680, 0, 131107, 327680, 0, 65571, 327680, 0, 65572, 327680, 0, 131108, 327680, 0, 196644, 327680, 0, 262180, 327680, 0, 327716, 327680, 0, 393252, 327680, 0, 393253, 327680, 0, 327717, 327680, 0, 262181, 327680, 0, 196645, 327680, 0, 131109, 327680, 0, 65573, 327680, 0, 65574, 327680, 0, 131110, 327680, 0, 196646, 327680, 0, 262182, 327680, 0, 327718, 327680, 0, 393254, 327680, 0, 393255, 327680, 0, 327719, 327680, 0, 262183, 327680, 0, 196647, 327680, 0, 131111, 327680, 0, 65575, 327680, 0, 65576, 327680, 0, 131112, 327680, 0, 196648, 327680, 0, 262184, 327680, 0, 327720, 327680, 0, 393256, 327680, 0, 393257, 327680, 0, 327721, 327680, 0, 262185, 327680, 0, 196649, 327680, 0, 131113, 327680, 0, 65577, 327680, 0, 65578, 327680, 0, 131114, 327680, 0, 196650, 327680, 0, 262186, 327680, 0, 327722, 327680, 0, 393258, 327680, 0, 393259, 327680, 0, 327723, 327680, 0, 262187, 327680, 0, 196651, 327680, 0, 131115, 327680, 0, 65579, 327680, 0, 65580, 327680, 0, 131116, 327680, 0, 196652, 327680, 0, 262188, 327680, 0, 327724, 327680, 0, 393260, 327680, 0, 393261, 327680, 0, 327725, 327680, 0, 262189, 327680, 0, 196653, 327680, 0, 131117, 327680, 0, 65581, 327680, 0, 65582, 327680, 0, 131118, 327680, 0, 196654, 327680, 0, 262190, 327680, 0, 327726, 327680, 0, 393262, 327680, 0, 393263, 327680, 0, 327727, 327680, 0, 262191, 327680, 0, 196655, 327680, 0, 131119, 327680, 0, 65583, 327680, 0, 65584, 327680, 0, 131120, 327680, 0, 196656, 327680, 0, 262192, 327680, 0, 327728, 327680, 0, 393264, 327680, 0, 393265, 327680, 0, 327729, 327680, 0, 262193, 327680, 0, 196657, 327680, 0, 131121, 327680, 0, 65585, 327680, 0, 65586, 327680, 0, 131122, 327680, 0, 196658, 327680, 0, 262194, 327680, 0, 327730, 327680, 0, 393266, 327680, 0, 393267, 327680, 0, 327731, 327680, 0, 262195, 327680, 0, 196659, 327680, 0, 131123, 327680, 0, 65587, 327680, 0, 65588, 327680, 0, 131124, 327680, 0, 196660, 327680, 0, 262196, 327680, 0, 327732, 327680, 0, 393268, 327680, 0, 393269, 327680, 0, 327733, 327680, 0, 262197, 327680, 0, 196661, 327680, 0, 131125, 327680, 0, 65589, 327680, 0, 65590, 327680, 0, 131126, 327680, 0, 196662, 327680, 0, 262198, 327680, 0, 327734, 327680, 0, 393270, 327680, 0, 393271, 327680, 0, 327735, 327680, 0, 262199, 327680, 0, 196663, 327680, 0, 131127, 327680, 0, 65591, 327680, 0, 65592, 327680, 0, 131128, 327680, 0, 196664, 327680, 0, 262200, 327680, 0, 327736, 327680, 0, 393272, 327680, 0, 393273, 327680, 0, 327737, 327680, 0, 262201, 327680, 0, 196665, 327680, 0, 131129, 327680, 0, 65593, 327680, 0, 65594, 327680, 0, 131130, 327680, 0, 196666, 327680, 0, 262202, 327680, 0, 327738, 327680, 0, 393274, 327680, 0, 59, 458752, 0, 60, 458752, 0, 61, 458752, 0, 62, 458752, 0, 63, 458752, 0, 64, 458752, 0, 65, 458752, 0, 66, 458752, 0, 67, 458752, 0, 68, 458752, 0, 69, 458752, 0, 70, 458752, 0, 71, 524288, 0, 196668, 327680, 0, 131132, 327680, 0, 65596, 327680, 0, 65595, 327680, 0, 131131, 327680, 0, 196667, 327680, 0, 262203, 327680, 0, 327739, 327680, 0, 393275, 327680, 0, 393276, 327680, 0, 327740, 327680, 0, 262204, 327680, 0, 262205, 327680, 0, 196669, 327680, 0, 131133, 327680, 0, 65597, 327680, 0, 65598, 327680, 0, 131134, 327680, 0, 196670, 327680, 0, 262206, 327680, 0, 327742, 327680, 0, 327741, 327680, 0, 393277, 327680, 0, 393278, 327680, 0, 393279, 327680, 0, 327743, 327680, 0, 262207, 327680, 0, 196671, 327680, 0, 131135, 327680, 0, 65599, 327680, 0, 65600, 327680, 0, 131136, 327680, 0, 196672, 327680, 0, 262208, 327680, 0, 327744, 327680, 0, 393280, 327680, 0, 393281, 327680, 0, 327745, 327680, 0, 262209, 327680, 0, 196673, 327680, 0, 131137, 327680, 0, 65601, 327680, 0, 65602, 327680, 0, 131138, 327680, 0, 196674, 327680, 0, 262210, 327680, 0, 327746, 327680, 0, 393282, 327680, 0, 393283, 327680, 0, 327747, 327680, 0, 262211, 327680, 0, 196675, 327680, 0, 131139, 327680, 0, 65603, 327680, 0, 65604, 327680, 0, 131140, 327680, 0, 196676, 327680, 0, 262212, 327680, 0, 327748, 327680, 0, 393284, 327680, 0, 393285, 327680, 0, 327749, 327680, 0, 262213, 327680, 0, 196677, 327680, 0, 131141, 327680, 0, 65605, 327680, 0, 65606, 327680, 0, 131142, 327680, 0, 196678, 327680, 0, 262214, 327680, 0, 327750, 327680, 0, 393286, 327680, 0, 393287, 131072, 0, 327751, 131072, 0, 262215, 131072, 0, 196679, 131072, 0, 131143, 131072, 0, 65607, 131072, 0)

[node name="Sprite2D5" type="Sprite2D" parent="."]
position = Vector2(578, 600)
scale = Vector2(4, 4)
texture = ExtResource("6_qow2k")

[node name="Notepad" type="Sprite2D" parent="Sprite2D5"]
position = Vector2(84, -25)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_25rel")
script = ExtResource("4_ooibg")

[node name="WaterButton" type="Button" parent="Sprite2D5/Notepad"]
offset_left = -107.5
offset_top = -186.25
offset_right = 20.5
offset_bottom = -155.25
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_srkwc")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_ebknh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ebknh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ebknh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ebknh")
text = "Filter Water"
metadata/_edit_use_anchors_ = true

[node name="FireButton" type="Button" parent="Sprite2D5/Notepad"]
offset_left = -122.5
offset_top = -131.25
offset_right = 5.50002
offset_bottom = -100.25
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_srkwc")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_ebknh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ebknh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ebknh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ebknh")
text = "Make Fire"
metadata/_edit_use_anchors_ = true

[node name="CompassButton" type="Button" parent="Sprite2D5/Notepad"]
offset_left = -112.5
offset_top = -71.25
offset_right = 43.5
offset_bottom = -40.25
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_srkwc")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_ebknh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ebknh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ebknh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ebknh")
text = "Orient Compass"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Sprite2D5/Notepad/WaterButton" to="Sprite2D5/Notepad" method="_on_water_button_pressed"]
[connection signal="pressed" from="Sprite2D5/Notepad/FireButton" to="Sprite2D5/Notepad" method="_on_fire_button_pressed"]
[connection signal="pressed" from="Sprite2D5/Notepad/CompassButton" to="Sprite2D5/Notepad" method="_on_compass_button_pressed"]
